# PoisoningCostMinimization

./: LICENSE  README.md  compute_Phi_and_r_o.py  evaluate.py  evaluate_social.py  explore_datasets.py  modelreply.py  modelreply_social.py  poison_data.py  poison_social_data.py  pyproject.toml  train_dpo.py
conf/: compute_Phi_and_r_o.yaml  config.yaml  poison_data.yaml  train_dpo.yaml
poisoning/: __init__.py  poisoning.py  preprocessing.py  rlhf_poison.py
train_reward/: FeatureExtractor.py  __init__.py
utils/: __init__.py  define_target.py  eval_tools.py  process_data.py  utils.py
